fix log whitespace non preservation issue

--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -26,6 +26,9 @@ code {
 
 pre {
   margin: 0;
+  white-space: pre-wrap;
+	overflow-wrap: anywhere;
+	tab-size: 2;
 }
 
 h1 {
